--- a/css/hours.css
+++ b/css/hours.css
@@ -10,21 +10,22 @@ body {
   body p {
     margin: 0;
     padding: 0; }
-  body .listbox {
-    background: #FFF;
-    -webkit-box-shadow: 2px 2px 8px -2px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 2px 2px 8px -2px rgba(0, 0, 0, 0.75);
-    box-shadow: 2px 2px 8px -2px rgba(0, 0, 0, 0.75);
+
+.listbox {
+  background: #FFF;
+  -webkit-box-shadow: 2px 2px 8px -2px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 2px 2px 8px -2px rgba(0, 0, 0, 0.75);
+  box-shadow: 2px 2px 8px -2px rgba(0, 0, 0, 0.75);
+  padding: 15px;
+  min-width: 340px;
+  display: flex; }
+  .listbox ul {
+    margin: 0;
     padding: 15px;
-    min-width: 340px;
-    display: flex; }
-    body .listbox ul {
-      margin: 0;
-      padding: 15px;
-      list-style: none; }
-      body .listbox ul li {
-        padding: 8px;
-        color: #777; }
-        body .listbox ul li span {
-          font-weight: 700;
-          color: #000; }
+    list-style: none; }
+    .listbox ul li {
+      padding: 8px;
+      color: #777; }
+      .listbox ul li span {
+        font-weight: 700;
+        color: #000; }
