--- a/css/hours.css
+++ b/css/hours.css
@@ -6,11 +6,13 @@ body {
   align-items: center;
   justify-content: center;
   background: url("http://subtlepatterns.com/patterns/restaurant.png");
-  font-family: Arial, sans-serif; }
+  font-family: 'Roboto', Arial, sans-serif;
+}
 
 p {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 .listbox {
   background: #FFF;
@@ -19,12 +21,14 @@ p {
   box-shadow: 2px 2px 8px -2px rgba(0, 0, 0, 0.75);
   padding: 15px;
   min-width: 340px;
-  display: flex; }
+  display: flex;
+}
 
 ul {
   margin: 0;
   padding: 15px;
-  list-style: none; }
+  list-style: none;
+}
 
 ul li {
 	padding: 5px 10px;
@@ -32,5 +36,5 @@ ul li {
 
 ul:first-child li:first-child {
     font-weight: 700;
-    color: #000; }
-
+    color: #000;
+}
