--- a/css/hours.css
+++ b/css/hours.css
@@ -11,7 +11,7 @@ body {
   font-family: Roboto, sans-serif;
 }
 
-.listbox {
+div {
   background: #FFF;
   -webkit-box-shadow: 2px 2px 8px -2px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 2px 2px 8px -2px rgba(0, 0, 0, 0.75);
